<resources>
    <string name="app_name">Toutiao Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CUIT</string>
    <string name="nav_header_subtitle">www.cuit.edu.cn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首页</string>
    <string name="menu_mine">账号</string>
    <string name="title_news">新闻</string>
    <string name="title_mine">账号</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_detail">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_setting">设置</string>
    <string name="settings">设置</string>
    <string name="nothing_here">nothing here</string>
    <string name="menu_accounts">账号</string>
    <string name="menu_side">侧边页面</string>
    <string name="setting_fragment">settingFragment</string>
    <string name="_7">7天访客</string>
    <string name="fans">粉丝</string>
    <string name="dong_tai">动态</string>
    <string name="login_tip">未登录(点击登录)</string>
    <string name="todo">descript</string>
    <string name="star">收藏</string>
    <string name="history">历史</string>
    <string name="night">夜间</string>
    <string name="feedback">用户反馈</string>
    <string name="account_set">账号设置</string>
    <string name="msg">消息通知</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登入</string>
    <string name="action_sign_in">登录</string>
    <string name="register">注册</string>
    <string name="action_register">注 册</string>
    <string name="confirm_password">再次输入密码</string>
    <string name="email">邮箱</string>
    <string name="basic_preferences">设置</string>
    <string name="title_basic_preference">基本设置</string>
    <string name="summary_basic_preference">目录</string>
    <string name="title_stylish_preference">标题风格设置</string>
    <string name="summary_stylish_preference">目录风格设置</string>
    <string name="title_icon_preference">标题图标设置</string>
    <string name="summary_icon_preference">目录图标设置</string>
    <string name="title_single_line_title_preference">标题占用一行</string>
    <string name="summary_single_line_title_preference">标题占用一行</string>
    <string name="widgets">组件</string>
    <string name="title_checkbox_preference">标题复选框</string>
    <string name="summary_checkbox_preference">标题复选框</string>
    <string name="title_switch_preference">标题切换</string>
    <string name="summary_switch_preference">标题切换</string>
    <string name="title_dropdown_preference">标题划下</string>
    <string name="title_seekbar_preference">seekbar</string>
    <string name="menu_comment">评论</string>
    <string name="logout">退出登录</string>
    <string name="update">修改信息</string>
    <string name="menu_iine">点赞</string>
    <string name="new_thread">发表新主题</string>
    <string name="avatar">Avatar</string>
    <string name="fit">点赞</string>
    <string name="about">关于</string>
    <string name="port_setting">端口设置</string>
    <string name="summary_port_setting">设置服务器api访问的地址（以 / 结尾）</string>
    <string name="add_Comment">添加评论</string>
    <string name="other">其他</string>
    <string name="exit">退出应用</string>
    <string name="post">POST</string>
    <string name="input_title">在这儿输入标题</string>
    <string name="dev_tool">开发者工具</string>
    <string name="check_login">检查登入状态</string>
    <string name="label_forum_num">分区：</string>
    <string name="search_hint">模糊搜索</string>
    <string name="input_content">在这儿输入内容</string>
    <string-array name="forum_array">
        <item>主页 - 1</item>
    </string-array>
    <string name="title_activity_info">用户信息</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_bad">点踩</string>
    <string name="menu_star">收藏</string>
    <string name="announce">公告</string>
    <string name="channel_name">channel_id_1</string>
    <string name="channel_description">channel_id_1_channel_description</string>
    <string name="delete">删除</string>
    <string name="top">置顶</string>
    <string name="_0">0</string>
    <string name="receive_notice">您收到了一条评论</string>
    <string name="_2020_06_18">2020/06/18</string>
</resources>