<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/basic_preferences">

        <EditTextPreference
            android:key="port"
            android:title="@string/port_setting"
            android:summary="@string/summary_port_setting"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">

        <Preference
            android:key="about"
            android:title="@string/about"
            app:singleLineTitle="true"/>

        <Preference
            android:key="exit"
            android:title="@string/exit"
            app:singleLineTitle="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dev_tool">

        <Preference
            android:key="check"
            android:title="@string/check_login"
            app:singleLineTitle="true" />
    </PreferenceCategory>
</PreferenceScreen>