<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mine.AccountsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--头部背景-->
            <ImageView
                android:id="@+id/iv_bg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/todo" />

            <!--头部用户信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_count"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ll_top"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:drawableStart="@mipmap/ic_launcher"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/login_tip"
                    android:textColor="#FFFFFF"
                    android:textSize="16.0sp" />
            </LinearLayout>
            <!--头部动态、粉丝、7天访客-->
            <LinearLayout
                android:id="@+id/ll_count"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_bg"
                android:layout_marginTop="18.0dip"
                android:layout_marginBottom="23.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="#FFFFFF"
                        android:textSize="16.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/dong_tai"
                        android:textColor="#FFFFFF"
                        android:textSize="12.0sp" />

                </LinearLayout>

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="38.0dip"
                    android:background="#FFFFFF" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="#FFFFFF"
                        android:textSize="16.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/fans"
                        android:textColor="#FFFFFF"
                        android:textSize="12.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="38.0dip"
                    android:background="#FFFFFF" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="#FFFFFF"
                        android:textSize="16.0sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/_7"
                        android:textColor="#FFFFFF"
                        android:textSize="12.0sp" />
                </LinearLayout>
            </LinearLayout>

            <!--内容-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_count"
                android:orientation="vertical">

                <!--收藏、历史、夜间-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_collect_pink_24dp"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/star"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_history_yellow_24dp"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/history"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_night_blue_24dp"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/night"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--     分界线   -->
                <View
                    android:id="@+id/ll_line1"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <!--  消息通知 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_11"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#FFFFFF"
                        android:drawableEnd="@drawable/ic_right_arrow_grey"
                        android:gravity="center_vertical"
                        android:text="@string/msg"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </RelativeLayout>

                <!--     分界线   -->
                <View
                    android:id="@+id/ll_line3"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <!--     分界线   -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="15dp"
                    android:orientation="horizontal" />

                <!--  用户反馈 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#FFFFFF"
                        android:drawableEnd="@drawable/ic_right_arrow_grey"
                        android:gravity="center_vertical"
                        android:text="@string/feedback"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </RelativeLayout>
                <!--     分界线   -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="15dp"
                    android:background="#000000"
                    android:orientation="horizontal" />
                <!--  设置 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableEnd="@drawable/ic_right_arrow_grey"
                        android:gravity="center_vertical"
                        android:text="@string/account_set"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </RelativeLayout>

<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="0.5dp"-->
<!--                    android:layout_marginStart="15dp"-->
<!--                    android:background="#000000"-->
<!--                    android:orientation="horizontal" />-->


            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
